resources/ej2-base/releasenotes/Xamarin-Android/Release-Notes/v18.1.0.52/pdf.md
## PDF

### Bug Fixes
{:#PDF-bug-fixes}

* \#271164 – Exception no longer occurs when saving the document after removing annotations. 
* \#261704 – Bookmark will be reflected properly after removing bookmarks. 
* \#259394 – Ink annotation will be preserved properly while flattening annotation. 
* \#273970 – Modified date will be retrieved properly from the input PDF document. 
* \#271463 – Exception no longer occurs when accessing layers from existing PDF document. 
* \#274280 – Exception no longer occurs when creating tables concurrently
* \#272832 – Exception no longer occurs when removing layers from existing PDF document. 
* \#272411 – Text will be preserved properly in `Word to PDF` conversion. 
* \#272840 – Layer name will be changed properly in existing PDF document. 
* \#251733 – Barcode background and quite zones will be preserved properly. 
* \#271614 – Image will be preserved properly in `Word to PDF` conversion. 
* \#266186 – Lines will be preserved properly in `Word to PDF` conversion.
* \#270437 – Form fields will be flattened properly in existing PDF document. 
* \#246796 – Fields and special characters preserved properly while import and signing the PDF documents. 
* \#269887 – PDF documents will be merged properly in different order. 
* \#269495 – Form field values will be preserved properly after disabling default appearance. 
* \#269472 – `ArgumentException` no longer occurs when saving the PDF document.
* \#274606 – `UriFormatException` no longer occurs when converting HTML string to PDF in Linux docker. 
* \#272045 – Auto tag will be work properly for `PdfPageNumberField`, `PdfPageCountField`, and `PdfCompositeField`.
* \#269907 – Exception no longer occurs when processing the `PdfTemplates` in Azure Durable Function.
* \#269961 – `PdfGrid` with column span and row span will pass the accessibility check on acrobat. 
* \#246796 – Special characters will be preserved properly on form flattening. 
* \#F152770 – Added support to set the border width to zero for grid cells. 
* `PdfLoadedTextBoxField` properly will be reflected properly in PDF document. 
